--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ Header h1{
     display: inline;
  }
 
-h2{
+h2, p{
     color: #39a6b2;
  }
 
@@ -70,4 +70,10 @@ footer div {
   footer a {
     color: #024e76;
   }
-
+/* Hero Style Start*/
+  section {
+    padding: 60px;
+    background-image: url("../assets/hero-bg.jpg");
+    height: 600px;
+  }
+/* Hero Style End */
