--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,16 +71,9 @@ footer div {
     color: #024e76;
   }
 /* Hero Style Start*/
-  .hero {    
-    background-image: url("../images/hero-bg.jpeg");
+  section {
+    padding: 60px;
+    background-image: url("../assets/hero-bg.jpg");
     height: 600px;
-    background-size: cover;
-    background-position: center;
-  }
-  .hero-form {
-    background-color: #fce138;
-    padding: 20px;
-    width: 500px;
-    color: #024e76;
   }
 /* Hero Style End */
