--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ footer h2 {
     font-size: 30px;
     margin: 0;
   }
-
+  /* Move text to the right*/
 footer div {
     float: right;
     line-height: 1.5;
@@ -70,10 +70,31 @@ footer div {
   footer a {
     color: #024e76;
   }
+
 /* Hero Style Start*/
+  .hero {
+    background-image: url("../images/hero-bg.jpeg");
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+  }
+  
+  .hero-form{
+    background-color: #fce138;
+    padding: 20px;
+    width: 500px;
+    color: #024e76;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+  }
+
   section {
     padding: 60px;
-    background-image: url("../assets/hero-bg.jpg");
     height: 600px;
   }
+
+  
+  background-image: url("../images/hero-bg.jpeg");
 /* Hero Style End */
