--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ Header h1{
     display: inline;
  }
 
-h2, p{
+h3 {
     color: #39a6b2;
  }
 
@@ -60,6 +60,7 @@ footer h2 {
     font-size: 30px;
     margin: 0;
   }
+  
   /* Move text to the right*/
 footer div {
     float: right;
@@ -81,20 +82,51 @@ footer div {
   }
   
   .hero-form{
+    border: 3px solid #024e76;
     background-color: #fce138;
     padding: 20px;
     width: 500px;
     color: #024e76;
     position: absolute;
-    bottom: 0px;
-    right: 0px;
+    bottom: 120px;
+    right: 140px;
   }
+
+  .hero-form h3 {
+    font-size: 24px;
+    margin: 0;
+  }
+
+  .hero-form p {
+    margin: 5px 0 15px 0;
+  }
+
+  .form-input {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+  }
+
+  .hero-form label {
+    margin: 0 5px;
+  }
+
+  .hero-form button {
+    color: #fce138;
+    background-color: #024e76;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+}
+
+/* Hero Style End */
 
   section {
     padding: 60px;
     height: 600px;
   }
 
-  
-  background-image: url("../images/hero-bg.jpeg");
-/* Hero Style End */
