--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ footer h2 {
     font-size: 30px;
     margin: 0;
   }
-  
+
   /* Move text to the right*/
 footer div {
     float: right;
@@ -130,3 +130,25 @@ footer div {
     height: 600px;
   }
 
+.intro {
+  text-align: center;
+}
+
+.intro h2 {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  border-bottom: 3px solid;
+  border-color: #fce138;
+  display: inline-block;
+}
+
+.intro p {
+  line-height: 1.7;
+  color: #39a6b2;
+  width: 80%;
+  font-size: 20px;
+  margin: 0 auto;
+  
+}
