--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ footer div {
 
 /* Hero Style Start*/
   .hero {
-    background-image: url("../images/hero-bg.jpeg");
+    background-image: url(../images/flipped-hero-image.jpeg);
     height: 600px;
     background-size: cover;
     background-position: center;
@@ -132,6 +132,23 @@ footer div {
 
 .intro {
   text-align: center;
+}
+
+.intro h2 {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  border-bottom: 3px solid;
+  border-color: #fce138;
+}
+
+.intro h2 {
+  display: inline-block;
+}
+
+.intro p {
+  margin: 0 auto;
 }
 
 /* what we do section */
