--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,11 @@ header {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-attachment: fixed;
+  background-position: 80%;
 }
 
 header h1 {
@@ -26,6 +30,7 @@ header h1 {
   margin: 0;
   font-size: 36px;
   color: #fce138;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a {
@@ -47,9 +52,17 @@ header nav ul {
 }
 
 header nav ul li a {
-  margin: 0 30px;
+  padding: 10px 15px;
   font-weight: lighter;
   font-size: 1.55vw;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover {
+  background: #fce138;
+  color: #024e76;
+  border-radius: 15px;
+  text-shadow: none;
 }
 
 /* HEADER / NAVBAR STYLES END */
@@ -91,10 +104,11 @@ section {
 .hero {
   background-image: url(../images/flipped-hero-image.jpeg);
   background-size: cover;
-  background-position: center;
+  background-position: 80%;
   display:flex;
   justify-content: center;
   flex-wrap: wrap;
+  background-attachment: fixed;
 }
 
 .hero-cta {
@@ -103,22 +117,25 @@ section {
   margin: 3.5%;
   color: #fff;
   font-size: 18px;
-  line-height: 1.3;
+  line-height: 1.2;
 }
 
 .hero-cta h2 {
   font-style: italic;
   font-size: 55px;
   color: #fce138;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form {
   border: 3px solid #024e76;
-  background-color: #fce138;
+  background-color: rgba(252, 225, 56, 80%);
   padding: 20px;
   color: #024e76;
   width: 40%;
   margin: 3.5%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
 }
 
 .hero-form h3 {
@@ -130,13 +147,20 @@ section {
 }
 
 .form-input {
+  background-color: rgba(255,255,255, 0.75);
   border: 1px solid #024e76;
   display: block;
   padding: 7px 15px;
   font-size: 16px;
   color: #024e76;
   width: 100%;
-  margin-bottom: 15px; 
+  margin-bottom: 15px;
+  border-radius: 10px; 
+}
+
+.form-input:focus {
+  background-color: rgba(255,255,255, 1);
+  outline: none;
 }
 
 .hero-form label {
@@ -149,13 +173,19 @@ section {
   border: none;
   padding: 10px 20px;
   font-size: 16px;
+  border-radius: 10px;
 } 
+
+.hero-form button:hover {
+  background-color: #39a6b2;
+}
+
 /* HERO STYLES END */
 
 
 /* SECTION TITLE STYLES START */
 .section-title {
-  font-size: 55px;
+  font-size: 48px;
   border-bottom: 3px solid;
   color: #024e76;
   padding-bottom: 20px;
@@ -174,9 +204,6 @@ section {
 /* SECTION TITLE STYLES END */
 
 /* WHAT WE DO STYLES */
-.intro {
- 
-}
 
 .intro p {
   line-height: 1.7;
@@ -203,6 +230,14 @@ section {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+}
+
+.step:nth-child(even) {
+  border-bottom: 1px solid #39a6b2;
+}
+
+.step:not(:last-child) {
+  border-bottom: 1px solid #39a6b2;
 }
 
 .step-text {
@@ -299,6 +334,14 @@ section {
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
+  border-radius: 10px;
+  background-color: rgba(255,255,255, 0.75);
+
+}
+
+.contact-form input:focus, .contact-form-textarea:focus {
+  background-color: rgba(255,255,255, 1);
+  outline: none;
 }
 
 .contact-form button {
@@ -309,6 +352,11 @@ section {
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
+  border-radius: 10px;
+}
+
+.contact-form button:hover {
+  background-color: #39a6b2;
 }
 
 .contact h2 {
@@ -364,4 +412,109 @@ section {
 
 .flex-row {
   display: flex;
+}
+
+/* MQ-980px MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+    /* this will be applied on any screen smaller than 980px */
+
+@media screen and (max-width:980px) {
+header {
+  padding-bottom: 0;
+  justify-content: center;
+  position: relative;
+}
+
+header h1 {
+  width: 100%;
+  text-align: center;
+}
+
+header nav ul {
+  margin-top: 20px;
+  width: 100;
+  justify-content: center;
+}
+
+header nav ul li a {
+  font-size: 20px;
+}
+
+
+text-align: center; {
+  text-align: center;
+  width: 100%;
+}
+
+.hero-cta, .hero-form {
+  width: 100%;
+}
+
+.hero-cta {
+  text-align: center;
+}
+
+.section-title {
+  width: 80%;
+}
+
+.trainer {
+  flex: 0 70%;
+}
+
+.contact-info iframe{
+  flex: 1 100%;
+}
+
+}
+/*  MQ-980px END  =========*/
+
+/* MQ-768px MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width: 768px) {
+  section {
+    padding: 30px 15px;
+  }
+    /* this will be applied on any screen between 768px and 575px */
+    
+}
+/*  MQ-768px END  =========*/
+
+/* /*  MQ-575px MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+
+/* this will be applied on any screen smaller than 575px */
+
+  .contact-form {
+    order: 3;
+  }
+
+  .hero-form button {
+    width: 100%;
+  }
+
+  .section-title {
+    width: 95%;
+  }
+
+  .intro p {
+    width: 100%;
+  }
+
+  .trainer {
+    flex: 0 100%;
+  }
+
+  .contact-info {
+    text-align: center;
+  }
+
+  .contact-info > * {
+    flex: 0 100%;
+  }
+}
+  }
+  
+}@media screen and (max-width: 300px) {
+        /* ADDED BY AMBEY this will be applied on any screen smaller than 300px */
+
 }
